# tetra

./: .env.example  .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  ARCHITECTURE.md  CONTEXT-MAP.md  CONTEXT.md  PLAN.md  README.md  VISION.md  bunfig.toml  components.json  knip.json  lefthook.yml  oxfmt.config.ts  oxlint.config.ts  package.json  skills-lock.json  tsconfig.json  turbo.json  vercel.json
.claude/: launch.json
.codex/environments/: environment.toml
apps/cli/: .env.example  package.json  tsconfig.json
apps/repl/: package.json  repl.ts  tsconfig.json
apps/sync/: package.json  sync.ts  tsconfig.json
apps/web/: .env.example  AGENTS.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: dev_bridge.rs  lib.rs  main.rs
apps/worker/: package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
docs/: ISSUES.md  arch-notes.md  core-restructure-proposal.md  integration-testing-strategy.md  package-boundaries.md  run-execution-design.md  session-message-control-design.md  sub-agents.md  sync-architecture.md  sync-persistence-strategy.md  testing.md  usage-design.md  usage.md
docs/adr/: 0001-thread-is-a-derived-message-path.md  (+7 more)
docs/agents/: domain.md  (+1 more)
reference/: DATA_MODEL_ARCHITECTURE_NOTES.md  DATA_MODEL_REVIEW.md  TETRA_MODULES.md  runtime-rewrite-claude.md  runtime-rewrite-codex.md  runtime-rewrite-plan.md  sub-agents.md
server/: sync.ts
src/: routeTree.gen.ts  styles.css
(+271 files in other folders)
